--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nodejs-ex",
+  "name": "personae-gratae",
   "version": "0.0.1",
-  "description": "Node.js sample app for OpenShift 3",
+  "description": "Red Hat UXD team software user persona creation and management app",
   "main": "server.js",
   "dependencies": {
     "chai": "^3.5.0",
