--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/openshift/nodejs-ex.git"
+    "url": "http://github.com/TheRealJon/personae-gratae.git"
   },
-  "author": "Steve Speicher <sspeiche@gmail.com>",
+  "author": "Jonathan Jackson <jonjacks@redhat.com>",
   "license": "CC-BY-1.0",
   "bugs": {
-    "url": "http://github.com/openshift/nodejs-ex/issues"
+    "url": "http://github.com/TheRealJon/personae-gratae/issues"
   },
-  "homepage": "http://github.com/openshift/nodejs-ex"
+  "homepage": "http://github.com/TheRealJon/personae-gratae"
 }
