--- a/package.json
+++ b/package.json
@@ -6,21 +6,22 @@
   "dependencies": {
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
-    "ejs": "^2.4.1",
     "express": "^4.13.4",
     "mocha": "^2.4.5",
     "mongodb": "^2.1.16",
     "morgan": "^1.7.0",
-    "object-assign": "4.1.0"
+    "object-assign": "4.1.0",
+    "yarn": "^1.6.0"
   },
   "engine": {
     "node": "*",
     "npm": "*"
   },
   "scripts": {
+    "build-client": "(cd client && yarn && yarn run build)",
     "start": "node server.js",
     "test": "IP=0.0.0.0 PORT=3030 mocha --timeout 5000 tests/*_test.js",
-    "postinstall": "cd client; npm install; npm run build"
+    "post-install": "npm run build-client"
   },
   "repository": {
     "type": "git",
