--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "npm": "*"
   },
   "scripts": {
-    "watch-less": "node ./bin/watch-less.js",
-    "build": "bash ./bin/build.sh",
+    "build": "cp -r ./node_modules/patternfly/dist/fonts ./assets/fonts; cp -r ./node_modules/patternfly/dist/img ./assets/img; lessc --include-path=node_modules:node_modules/patternfly/node_modules ./styles/main.less ./assets/css/main.css;",
     "start": "node server.js",
     "test": "IP=0.0.0.0 PORT=3030 mocha --timeout 5000 tests/*_test.js",
     "postinstall": "npm run build"
